--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,147 @@
+@import 'tailwindcss';
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    --max-content-width: 1000px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+:root[data-theme='dark'] {
+    --color-main: hsl(0, 0%, 5%);
+    --color-main-muted: hsl(0, 0%, 20%);
+    --color-details: hsl(0, 75%, 50%);
+    --color-alert: hsl(0, 75%, 50%);
+    --color-highlight: hsl(0, 75%, 50%);
+    --color-text: hsl(0, 0%, 95%);
+    --color-muted-text: hsl(0, 0%, 70%);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+:root[data-theme='light'] {
+    --color-main: hsl(0, 0%, 95%);
+    --color-main-muted: hsla(0, 0%, 80%);
+    --color-details: hsl(0, 75%, 50%);
+    --color-alert: hsl(0, 75%, 50%);
+    --color-highlight: hsl(0, 75%, 50%);
+    --color-text: hsl(0, 0%, 5%);
+    --color-muted-text: hsl(0, 10%, 20%);
+}
+
+:root[data-theme='sepia'] {
+    --color-main: hsl(0, 28%, 33%);
+    --color-main-muted: hsl(0, 25%, 18%);
+    --color-details: hsl(0, 75%, 50%);
+    --color-alert: hsl(0, 75%, 50%);
+    --color-highlight: hsl(0, 75%, 50%);
+    --color-text: hsl(0, 40%, 95%);
+    --color-muted-text: hsla(0, 10%, 70%);
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: var(--text-4xl) /* 2.25rem = 36px */;
+    line-height: var(
+        --tw-leading,
+        var(--text-4xl--line-height) /* calc(2.25 / 2.25) ≈ 1.2 */
+    );
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+h2 {
+    font-size: var(--text-3xl) /* 1.875rem = 30px */;
+    line-height: var(
+        --tw-leading,
+        var(--text-3xl--line-height) /* calc(2.25 / 1.875) ≈ 1.2 */
+    );
+    margin-top: 1rem;
+    margin-bottom: 0.75rem;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.muted {
+    color: var(--color-muted-text);
+}
+
+.header {
+    width: 100%;
+    max-width: var(--max-content-width);
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    margin: auto;
+}
+
+.page {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.global-nav {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem 3rem 2rem;
+    z-index: 50;
+    background-color: var(--color-main);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.global-nav > .inner {
+    max-width: var(--max-content-width);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.page-content {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.page-footer {
+    color: var(--color-muted-text);
+    flex-shrink: 0;
+    margin-top: auto;
+}
+.page-footer > .inner {
+    max-width: var(--max-content-width);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2rem 3rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.session {
+    padding: 5rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.session > .session-inner {
+    max-width: var(--max-content-width);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.light {
+    background-color: var(--color-text);
+    color: var(--color-main);
+}
+
+.dark {
+    background-color: var(--color-main);
+    color: var(--color-text);
 }
